--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="boutons">
                 <a href="accueil.html"><button><span>Accueil</span></button></a>
                 <button>Portfolio</button>
-                <button>Boutique</button>
+                <a href="boutique.pchartdesign.com"><button><span>Boutique</span></button></a>
                 <button>Contact</button>
             </div>
         </div>
