modif bouton boutique dans accueil + ajout image fond 2

--- a/accueil.html
+++ b/accueil.html
@@ -29,7 +29,7 @@
                 <button>Portfolio</button>
             </div>
             <div class="boutons2">
-                <button>Boutique</button>
+                <a href="https://boutique.pchartdesign.com"><button><span>Boutique</span></button></a>
             </div>
             <div class="boutons3">
                 <button>Contact</button>
