Ajout page portfolio

--- a/accueil.html
+++ b/accueil.html
@@ -30,10 +30,10 @@
                 <img src="Images/Logo.png" id="image-logo">
             </div>
             <div class="boutons0">
-                <button id="accueilButton">Accueil</button>
+                <a href="accueil.html"><button><span>Accueil</span></button></a>
             </div>
             <div class="boutons1">
-                <button>Portfolio</button>
+                <a href="portfolio.html"><button><span>Portfolio</span></button></a>
             </div>
             <div class="boutons2">
                 <a href="https://boutique.pchartdesign.com"><button><span>Boutique</span></button></a>
@@ -51,7 +51,7 @@
                 <h1>À VOTRE ÉCOUTE.</h1>
             </div>
 
-            <div class="container5">
+            <div class="animated-container5">
                 <h1>Hello, moi c’est Pauline.</h1>
                 <h1>Je suis passionnée d’art depuis toujours.</h1>  
                 <h1>Je dessine et je peins depuis des années, j’aimerais vivre de mes créations. C’est pour cela que j’ai créé PChArt Design en 2018.</h1>   
