--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <h1>Art sur mesure</h1>
             <div class="boutons">
                 <a href="accueil.html"><button><span>Accueil</span></button></a>
-                <button>Portfolio</button>
+                <a href="portfolio.html"><button><span>Portfolio</span></button></a>
                 <a href="https://boutique.pchartdesign.com"><button><span>Boutique</span></button></a>
                 <button>Contact</button>
             </div>
