--- a/portfolio.html
+++ b/portfolio.html
@@ -30,10 +30,10 @@
                 <img src="Images/Logo.png" id="image-logo">
             </div>
             <div class="boutons0">
-                <button id="accueilButton">Accueil</button>
+                <a href="accueil.html"><button><span>Accueil</span></button></a>
             </div>
             <div class="boutons1">
-                <button>Portfolio</button>
+                <a href="portfolio.html"><button><span>Portfolio</span></button></a>
             </div>
             <div class="boutons2">
                 <a href="https://boutique.pchartdesign.com"><button><span>Boutique</span></button></a>
@@ -41,5 +41,9 @@
             <div class="boutons3">
                 <button>Contact</button>
             </div>
+            <div class="blue-circle2"></div> <!-- Cercle bleu ajouté -->
+            <div class="pink-circle2"></div> <!-- Cercle bleu ajouté -->
+            <div class="pink-square0"></div> <!-- Cercle bleu ajouté -->
+            <div class="pink-square1"></div> <!-- Cercle bleu ajouté -->
 </body>
 </html>
