--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         <div class="bandeau-blanc">
             <h1>Art sur mesure</h1>
             <div class="boutons">
-                <a href="accueil.html"><button><span>Accueil</span></button></a>
-                <a href="portfolio.html"><button><span>Portfolio</span></button></a>
+                <a href="00_Accueil/accueil.html"><button><span>Accueil</span></button></a>
+                <a href="01_Portfolio/portfolio.html"><button><span>Portfolio</span></button></a>
                 <a href="https://boutique.pchartdesign.com"><button><span>Boutique</span></button></a>
                 <button>Contact</button>
             </div>
