--- a/accueil.html
+++ b/accueil.html
@@ -11,7 +11,7 @@
     <title>PChArt Design-Accueil</title>
     <link rel="icon" href="Images/Logo-1.ico">
     <link rel="apple-touch-icon" href="Images/Logo-1.ico">
-    <link rel="stylesheet" href="00_Accueil/mainaccueil.css"> <!-- Assurez-vous que le nom du fichier CSS est correct -->
+    <link rel="stylesheet" href="mainaccueil.css"> <!-- Assurez-vous que le nom du fichier CSS est correct -->
 </head>
 <body>
     <div class="background-image">
