--- a/accueil.html
+++ b/accueil.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name = "author" content="PchArt Design">
@@ -11,7 +11,7 @@
     <title>PChArt Design-Accueil</title>
     <link rel="icon" href="Images/Logo-1.ico">
     <link rel="apple-touch-icon" href="Images/Logo-1.ico">
-    <link rel="stylesheet" href="mainaccueil.css"> <!-- Assurez-vous que le nom du fichier CSS est correct -->
+    <link rel="stylesheet" href="CSS/mainaccueil.css"> <!-- Assurez-vous que le nom du fichier CSS est correct -->
 </head>
 <body>
     <div class="background-image">
@@ -30,10 +30,10 @@
                 <img src="Images/Logo.png" id="image-logo">
             </div>
             <div class="boutons0">
-                <a href="00_Accueil/accueil.html"><button><span>Accueil</span></button></a>
+                <a href="accueil.html"><button><span>Accueil</span></button></a>
             </div>
             <div class="boutons1">
-                <a href="01_Portfolio/portfolio.html"><button><span>Portfolio</span></button></a>
+                <a href="portfolio.html"><button><span>Portfolio</span></button></a>
             </div>
             <div class="boutons2">
                 <a href="https://boutique.pchartdesign.com"><button><span>Boutique</span></button></a>
