Finalisation de la page portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -41,9 +41,52 @@
             <div class="boutons3">
                 <button>Contact</button>
             </div>
-            <div class="blue-circle2"></div> <!-- Cercle bleu ajouté -->
-            <div class="pink-circle2"></div> <!-- Cercle bleu ajouté -->
             <div class="pink-square0"></div> <!-- Cercle bleu ajouté -->
             <div class="pink-square1"></div> <!-- Cercle bleu ajouté -->
+            <div class="blue-circle2"></div> <!-- Cercle bleu ajouté -->
+            <div class="pink-circle2"></div> <!-- Cercle bleu ajouté -->
+            <div class="text-container">
+                <div class="text1">
+                    <h1>"Un tableau ne vit que par celui qui le regarde."</h1>
+                    <h1>Pablo Picasso</h1>
+                </div>
+                <div class="text2">
+                    <h1>"Pas de chef d'oeuvre dans la paresse."</h1>
+                    <h1>Salvador Dali</h1>
+                </div>
+                <div class="text3">
+                    <h1>"Réaliser des esquisses revient à planter des graines pour faire pousser des tableaux."</h1>
+                    <h1>Vincent Van Gogh</h1>
+                </div>
+                <div class="text4">
+                    <h1>"Il faut que la peinture serve à autre chose au'à la peinture."</h1>
+                    <h1>Henri Matisse</h1>
+                </div>
+                <div class="text5">
+                    <h1>"Pour réaliser une chose vraiment extraordinaire, commencez par le rêver."</h1>
+                    <h1>Walt Disney</h1>
+                </div>
+                <div class="text6">
+                    <h1>PORTFOLIO</h1>
+                </div>
+                <div class="text7 button2">
+                    <button>MON PARCOURS.</button>
+                </div>
+                <div class="text8 button2">
+                    <button>OEUVRES ORIGINALES.</button>
+                </div>
+                <div class="text9 button2">
+                    <button>CUSTOMS.</button>
+                </div>
+                <div class="text10 button2">
+                    <button>ART DIGITAL.</button>
+                </div>
+                <div class="text11 button2">
+                    <button>GRAPHISME.</button>
+                </div>
+                <div class="text12 button2">
+                    <button>MOBILIER.</button>
+                </div>
+            </div>
 </body>
 </html>
