Finalisation de la page parcours

--- a/portfolio.html
+++ b/portfolio.html
@@ -70,7 +70,7 @@
                     <h1>PORTFOLIO</h1>
                 </div>
                 <div class="text7 button2">
-                    <button>MON PARCOURS.</button>
+                    <a href="parcours.html"><button><span>MON PARCOURS.</span></button></a>
                 </div>
                 <div class="text8 button2">
                     <button>OEUVRES ORIGINALES.</button>
