Ajout des reseaux et test galerie image

--- a/oeuvresoriginales.html
+++ b/oeuvresoriginales.html
@@ -61,6 +61,36 @@
             <div class="text12">
                 <button>MOBILIER.</button>
             </div>
+            <div class="gallery">
+                <div class="thumbnail" onclick="showImage('images/Dessin_AB.jpg', 'Texte pour l\'image 1')">
+                    <img src="images/Dessin_AB.jpg" alt="Image 1">
+                </div>
+                <div class="thumbnail" onclick="showImage('Images/Guesha.jpg', 'Texte pour l\'image 2')">
+                    <img src="Images/Guesha.jpg" alt="Image 2">
+                </div>
+                <div class="thumbnail" onclick="showImage('Images/Tango.jpg', 'Texte pour l\'image 3')">
+                    <img src="Images/Tango.jpg" alt="Image 3">
+                </div>
+                <!-- Ajoutez autant de vignettes que nécessaire -->
+            </div>
+       
+        
+            <div id="imageDisplay" class="image-display">
+                <img id="largeImage" src="" alt="Image affichée">
+                <p id="imageText"></p>
+            </div>
+              <!-- Section pour les réseaux sociaux -->
+              <div class="social-media">
+                <p>Retrouvez-moi sur les réseaux : </p>
+                <div class="social-icons">
+                    <a href="https://www.facebook.com/PChArtDesign" target="_blank" class="social-icon facebook"></a>
+                    <a href="https://www.behance.net/pchartdesign_" target="_blank" class="social-icon behance"></a>
+                    <a href="https://www.instagram.com/pchart_" target="_blank" class="social-icon instagram"></a>
+                </div>
+            </div>
 
+        </div>
+
+            <script src="JS/script.js"></script>
     </body>
     </html>
