--- a/portfolio.html
+++ b/portfolio.html
@@ -87,6 +87,15 @@
                 <div class="text12 button2">
                     <button>MOBILIER.</button>
                 </div>
+                              <!-- Section pour les réseaux sociaux -->
+              <div class="social-media">
+                <p>Retrouvez-moi sur les réseaux : </p>
+                <div class="social-icons">
+                    <a href="https://www.facebook.com/PChArtDesign" target="_blank" class="social-icon facebook"></a>
+                    <a href="https://www.behance.net/pchartdesign_" target="_blank" class="social-icon behance"></a>
+                    <a href="https://www.instagram.com/pchart_" target="_blank" class="social-icon instagram"></a>
+                </div>
+            </div>
             </div>
 </body>
 </html>
