--- a/accueil.html
+++ b/accueil.html
@@ -66,7 +66,17 @@
                 <h1>Pauline</h1>
              </div>
         </div>
-  
+      <!-- Section pour les réseaux sociaux -->
+        <div class="social-media">
+            <p>Retrouvez-moi sur les réseaux : </p>
+            <div class="social-icons">
+                <a href="https://www.facebook.com/PChArtDesign" target="_blank" class="social-icon facebook"></a>
+                <a href="https://www.behance.net/pchartdesign_" target="_blank" class="social-icon behance"></a>
+                <a href="https://www.instagram.com/pchart_" target="_blank" class="social-icon instagram"></a>
+            </div>
+        </div>
+        <!-- Ajoutez d'autres réseaux sociaux si nécessaire -->
+    </div>
         
         <!-- Ajoutez plus de contenu ici selon vos besoins -->
     </div>
