--- a/parcours.html
+++ b/parcours.html
@@ -105,6 +105,15 @@
                 Redex, Ferrières-en-Gâtinais (45)</p>
             </div>
             <div class="separateur"></div>
+                          <!-- Section pour les réseaux sociaux -->
+                          <div class="social-media">
+                            <p>Retrouvez-moi sur les réseaux : </p>
+                            <div class="social-icons">
+                                <a href="https://www.facebook.com/PChArtDesign" target="_blank" class="social-icon facebook"></a>
+                                <a href="https://www.behance.net/pchartdesign_" target="_blank" class="social-icon behance"></a>
+                                <a href="https://www.instagram.com/pchart_" target="_blank" class="social-icon instagram"></a>
+                            </div>
+                        </div>
         </div>
         <div class="download-container">
             <p>
