oeuvre originale devient projet

--- a/projart.html
+++ b/projart.html
@@ -41,13 +41,13 @@
                 <button>Contact</button>
             </div>
             <div class="text6">
-                <h1>OEUVRES ORIGINALES.</h1>
+                <h1>PROJETS ARTISTIQUES.</h1>
             </div>
             <div class="text7">
                 <a href="parcours.html"><button><span>MON PARCOURS.</span></button></a>
             </div>
             <div class="text8">
-                <a href="oeuvresoriginales.html"><button><span>OEUVRES ORIGINALES.</span></button></a>
+                <a href="projart.html"><button><span>PROJETS ARTISTIQUES.</span></button></a>
             </div>
            <div class="text9">
                 <button>CUSTOMS.</button>
@@ -61,6 +61,8 @@
             <div class="text12">
                 <button>MOBILIER.</button>
             </div>
+
+
             <div class="gallery">
                 <div class="thumbnail" onclick="showImage('images/Dessin_AB.jpg', 'Texte pour l\'image 1')">
                     <img src="images/Dessin_AB.jpg" alt="Image 1">
@@ -73,12 +75,13 @@
                 </div>
                 <!-- Ajoutez autant de vignettes que nécessaire -->
             </div>
-       
-        
             <div id="imageDisplay" class="image-display">
                 <img id="largeImage" src="" alt="Image affichée">
                 <p id="imageText"></p>
             </div>
+
+
+
               <!-- Section pour les réseaux sociaux -->
               <div class="social-media">
                 <p>Retrouvez-moi sur les réseaux : </p>
