--- a/parcours.html
+++ b/parcours.html
@@ -47,7 +47,7 @@
                 <a href="parcours.html"><button><span>MON PARCOURS.</span></button></a>
             </div>
             <div class="text8">
-                <a href="oeuvresoriginales.html"><button><span>OEUVRES ORIGINALES.</span></button></a>
+                <a href="projart.html"><button><span>PROJETS ARTISTIQUES.</span></button></a>
             </div>
            <div class="text9">
                 <button>CUSTOMS.</button>
