--- a/portfolio.html
+++ b/portfolio.html
@@ -73,7 +73,7 @@
                     <a href="parcours.html"><button><span>MON PARCOURS.</span></button></a>
                 </div>
                 <div class="text8 button2">
-                    <a href="oeuvresoriginales.html"><button><span>OEUVRES ORIGINALES.</span></button></a>
+                    <a href="projart.html"><button><span>PROJETS ARTISTIQUES.</span></button></a>
                 </div>
                 <div class="text9 button2">
                     <button>CUSTOMS.</button>
