Modification de la page projet artistique

--- a/projart.html
+++ b/projart.html
@@ -43,6 +43,12 @@
             <div class="text6">
                 <h1>PROJETS ARTISTIQUES.</h1>
             </div>
+            <div class="text13">
+                <h1>Je vous propose mes compétences en art pour réaliser vos créations classiques ou atypiques.</h1>
+            </div>
+            <div class="text14">
+                <h1>Chaque projet est unique et fera l'objet d'une étude pour déterminer son prix.</h1>
+            </div>
             <div class="text7">
                 <a href="parcours.html"><button><span>MON PARCOURS.</span></button></a>
             </div>
@@ -62,23 +68,41 @@
                 <button>MOBILIER.</button>
             </div>
 
+            <div class="containerG">
+                <div class="menu">
+                    <button class="category-btn" data-category="category1">DESIGN DE TATOUAGES.</button>
+                    <div class="thumbnails-containerG" id="thumbnails-category1">
+                        <!-- Vignettes de la catégorie 1 -->
+                        <img src="Images/Coque_Blues_Brothers.jpg" alt="Coque Blues Brothers" class="thumbnail" data-description="Coque de téléphone <br> Peinture acrylique <br> finition en résine époxy.">
+                        <img src="Images/Dessin_AB.jpg" alt="Bas Relief" class="thumbnail" data-description="Procreate">
+                        <img src="Images/Guesha.jpg" alt="La Geisha et son Dogfu" class="thumbnail" data-description="Toile 90x30 Peinture acrylique">
+                        <!-- Ajoute d'autres images ici -->
+                    </div>
+                    <button class="category-btn" data-category="category2">DESSIN D'ART.</button>
+                    <div class="thumbnails-containerG" id="thumbnails-category2">
+                        <!-- Vignettes de la catégorie 2 -->
+                    </div>
+                    <button class="category-btn" data-category="category3">PEINTURES.</button>
+                    <div class="thumbnails-containerG" id="thumbnails-category3">
+                        <!-- Vignettes de la catégorie 3 -->
+                    </div>
+                    <button class="category-btn" data-category="category4">ART DIGITAL.</button>
+                    <div class="thumbnails-containerG" id="thumbnails-category4">
+                        <!-- Vignettes de la catégorie 3 -->
+                    </div>
+                    <!-- Ajoute d'autres boutons de catégories et conteneurs de vignettes ici -->
+                </div>
+                <div class="gallery">
+                    <div class="display-containerG">
+                        <div class="polaroid">
+                            <img src="" alt="" id="displayed-image">
+                            <div class="caption" id="image-title"></div>
+                        </div>
+                        <div class="image-description" id="image-description"></div>
+                    </div>
+                </div>
+            </div>
 
-            <div class="gallery">
-                <div class="thumbnail" onclick="showImage('images/Dessin_AB.jpg', 'Texte pour l\'image 1')">
-                    <img src="images/Dessin_AB.jpg" alt="Image 1">
-                </div>
-                <div class="thumbnail" onclick="showImage('Images/Guesha.jpg', 'Texte pour l\'image 2')">
-                    <img src="Images/Guesha.jpg" alt="Image 2">
-                </div>
-                <div class="thumbnail" onclick="showImage('Images/Tango.jpg', 'Texte pour l\'image 3')">
-                    <img src="Images/Tango.jpg" alt="Image 3">
-                </div>
-                <!-- Ajoutez autant de vignettes que nécessaire -->
-            </div>
-            <div id="imageDisplay" class="image-display">
-                <img id="largeImage" src="" alt="Image affichée">
-                <p id="imageText"></p>
-            </div>
 
 
 
