réorganisation des images et création de la galerie pour la page projet artistique

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <meta name = "publisher" content="PchArt Design">
     <title>PChArt Design</title>
     <link rel="stylesheet" href="main.css">
-    <link rel="icon" href="Images/Logo-1.ico">
-    <link rel="apple-touch-icon" href="Images/Logo-1.ico">
+    <link rel="icon" href="Images/Ressources/Logo-1.ico">
+    <link rel="apple-touch-icon" href="Images/Ressources/Logo-1.ico">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="JS/app.js"></script>
 </head>
@@ -19,39 +19,39 @@
     <div class="background-black">
         <div class="skewed-container">
             <div class="skewed-content">
-                <img src="Images/Barre 5D.PNG" alt="Image penchée">
+                <img src="Images/Page de garde/Barre 5D.PNG" alt="Image penchée">
             </div>
         </div>
         <div class="skewed-container2">
             <div class="skewed-content2">
-                <img src="Images/Barre 4D.PNG" alt="Image penchée2">
+                <img src="Images/Page de garde/Barre 4D.PNG" alt="Image penchée2">
             </div>
         </div>
         <div class="skewed-container3">
             <div class="skewed-content3">
-                <img src="Images/Barre 3D.PNG" alt="Image penchée3">
+                <img src="Images/Page de garde/Barre 3D.PNG" alt="Image penchée3">
             </div>
         </div>
         <div class="skewed-container4">
             <div class="skewed-content4">
-                <img src="Images/Barre 5G.PNG" alt="Image penchée4">
+                <img src="Images/Page de garde/Barre 5G.PNG" alt="Image penchée4">
             </div>
         </div>
         <div class="skewed-container5">
             <div class="skewed-content5">
-                <img src="Images/Barre 4G.PNG" alt="Image penchée5">
+                <img src="Images/Page de garde/Barre 4G.PNG" alt="Image penchée5">
             </div>
         </div>
         <div class="skewed-container6">
             <div class="skewed-content6">
-                <img src="Images/Barre 3G.PNG" alt="Image penchée6">
+                <img src="Images/Page de garde/Barre 3G.PNG" alt="Image penchée6">
             </div>
         </div>
     </div>
     <div class="container">
         <div id="image-sequence">
             <!-- Image centrale -->
-            <img src="Images/Logo.png" id="image-centrale">
+            <img src="Images/Ressources/Logo.png" id="image-centrale">
         </div>
         <div class="bandeau-blanc">
             <h1>Art sur mesure</h1>
