--- a/parcours.html
+++ b/parcours.html
@@ -10,8 +10,8 @@
     <meta name = "publisher" content="PchArt Design">
     <title>PChArt Design-Portfolio</title>
     <link rel="stylesheet" href="styleparcours.css">
-    <link rel="icon" href="Images/Logo-1.ico">
-    <link rel="apple-touch-icon" href="Images/Logo-1.ico">
+    <link rel="icon" href="Images/Ressources/Logo-1.ico">
+    <link rel="apple-touch-icon" href="Images/Ressources/Logo-1.ico">
 </head>
 <body>
     <div class="background-image">
@@ -26,7 +26,7 @@
             </div>
         <div class="container">
             <div id="image-sequence">
-                <img src="Images/Logo.png" id="image-logo">
+                <img src="Images/Ressources/Logo.png" id="image-logo">
             </div>
             <div class="boutons0">
                 <a href="accueil.html"><button><span>Accueil</span></button></a>
