--- a/projart.html
+++ b/projart.html
@@ -10,8 +10,8 @@
     <meta name = "publisher" content="PchArt Design">
     <title>PChArt Design-Portfolio</title>
     <link rel="stylesheet" href="styleoeuvresorig.css">
-    <link rel="icon" href="Images/Logo-1.ico">
-    <link rel="apple-touch-icon" href="Images/Logo-1.ico">
+    <link rel="icon" href="Images/Ressources/Logo-1.ico">
+    <link rel="apple-touch-icon" href="Images/Ressources/Logo-1.ico">
 </head>
 <body>
     <div class="background-image">
@@ -26,7 +26,7 @@
             </div>
         <div class="container">
             <div id="image-sequence">
-                <img src="Images/Logo.png" id="image-logo">
+                <img src="Images/Ressources/Logo.png" id="image-logo">
             </div>
             <div class="boutons0">
                 <a href="accueil.html"><button><span>Accueil</span></button></a>
@@ -73,9 +73,9 @@
                     <button class="category-btn" data-category="category1">DESIGN DE TATOUAGES.</button>
                     <div class="thumbnails-containerG" id="thumbnails-category1">
                         <!-- Vignettes de la catégorie 1 -->
-                        <img src="Images/Coque_Blues_Brothers.jpg" alt="Coque Blues Brothers" class="thumbnail" data-description="Coque de téléphone <br> Peinture acrylique <br> finition en résine époxy.">
-                        <img src="Images/Dessin_AB.jpg" alt="Bas Relief" class="thumbnail" data-description="Procreate">
-                        <img src="Images/Guesha.jpg" alt="La Geisha et son Dogfu" class="thumbnail" data-description="Toile 90x30 Peinture acrylique">
+                        <img src="Images/Projets Art/Tatouages/Lions.jpg" alt="Lions" class="thumbnail" data-description="Eléments pour un mollet d'homme <br> Demande: 1 Lion principal avec une lionne et 2 lionceaux <br> Style: mélange de réalisme avec du géométrique">
+                        <img src="Images/Projets Art/Tatouages/ShowMust.jpg" alt="The Show Must Go On" class="thumbnail" data-description="">
+                        <img src="Images/Projets Art/Tatouages/Crayon Aile.jpg" alt="Crayon Ailé" class="thumbnail" data-description="">
                         <!-- Ajoute d'autres images ici -->
                     </div>
                     <button class="category-btn" data-category="category2">DESSIN D'ART.</button>
@@ -85,6 +85,14 @@
                     <button class="category-btn" data-category="category3">PEINTURES.</button>
                     <div class="thumbnails-containerG" id="thumbnails-category3">
                         <!-- Vignettes de la catégorie 3 -->
+                          <!-- Vignettes de la catégorie 1 -->
+                        <img src="Images/Projets Art/Peintures/Blues Brothers.jpg" alt="The Blues Brothers" class="thumbnail" data-description="">
+                        <img src="Images/Projets Art/Peintures/Geisha.jpg" alt="La Geisha et son Dogfu" class="thumbnail" data-description="">
+                        <img src="Images/Projets Art/Peintures/Iron Man.jpg" alt="Iron Man" class="thumbnail" data-description="">
+                        <img src="Images/Projets Art/Peintures/Gwen.jpg" alt="Composition pour Gwen" class="thumbnail" data-description="">
+                        <img src="Images/Projets Art/Peintures/Hulk.jpg" alt="Hulk" class="thumbnail" data-description="">
+                        <img src="Images/Projets Art/Peintures/Mulan.jpg" alt="Mulan" class="thumbnail" data-description="">
+                        <!-- Ajoute d'autres images ici -->
                     </div>
                     <button class="category-btn" data-category="category4">ART DIGITAL.</button>
                     <div class="thumbnails-containerG" id="thumbnails-category4">
