Finalisation de la page projets artistiques

--- a/projart.html
+++ b/projart.html
@@ -70,40 +70,47 @@
 
             <div class="containerG">
                 <div class="menu">
-                    <button class="category-btn" data-category="category1">DESIGN DE TATOUAGES.</button>
+                    <button class="category-btn" data-category="category1">DESSIN D'ART.</button>
                     <div class="thumbnails-containerG" id="thumbnails-category1">
-                        <!-- Vignettes de la catégorie 1 -->
-                        <img src="Images/Projets Art/Tatouages/Lions.jpg" alt="Lions" class="thumbnail" data-description="Eléments pour un mollet d'homme <br> Demande: 1 Lion principal avec une lionne et 2 lionceaux <br> Style: mélange de réalisme avec du géométrique">
-                        <img src="Images/Projets Art/Tatouages/ShowMust.jpg" alt="The Show Must Go On" class="thumbnail" data-description="">
-                        <img src="Images/Projets Art/Tatouages/Crayon Aile.jpg" alt="Crayon Ailé" class="thumbnail" data-description="">
-                        <!-- Ajoute d'autres images ici -->
-                    </div>
-                    <button class="category-btn" data-category="category2">DESSIN D'ART.</button>
-                    <div class="thumbnails-containerG" id="thumbnails-category2">
                         <!-- Vignettes de la catégorie 2 -->
+                        <img src="Images/Projets Art/Dessins/Dragons.jpg" alt="Dragons" class="thumbnail" data-description="Concept pour un tatouage<br><br>Dessin sur canson<br><br>Inspiration Triskel Breton<br><br>Les branches du Triskel devront être des dragons représentant les éléments, Eau, Terre et Feu.">
+                        <img src="Images/Projets Art/Dessins/BigBenLumière.jpg" alt="Big Ben & Lumière" class="thumbnail" data-description="Dessin sur canson<br><br>Représentation des personnages Big Ben et Lumière du dessin animé Disney, La Belle et la Bête.<br><br>Réalisé aux crayons de couleurs">
+                        <img src="Images/Projets Art/Dessins/GeometricRose.jpg" alt="Geometric Tattoo" class="thumbnail" data-description="Concept pour un tatouage<br><br>Dessin sur canson<br><br>Inspiration géométrique avec l'intégration d'une rose dans le style traditionnel, ce design pouvait être positionné dans le dos le long de la colonne ou à l'arrière d'une jambe. ">
+                        <img src="Images/Projets Art/Dessins/Tango.jpg" alt="Tango" class="thumbnail" data-description="Dessin sur canson<br><br>Couple de danseurs<br><br>Réalisé au crayon et à la peinture acrylique pour mettre en avant la robe rouge de la danseuse.">
+                        <img src="Images/Projets Art/Dessins/Initiales.jpg" alt="Initiales" class="thumbnail" data-description="Concept pour un tatouage<br><br>Dessin sur canson<br><br>Intégration des lettres S et T dans une jolie calligraphie<br><br>Ajout d'une fleur d'orchidée et de quelques ornements pour apporter un peu plus de féminité au dessin.">
+                        <img src="Images/Projets Art/Dessins/Lions.jpg" alt="Lions" class="thumbnail" data-description="Concept pour un tatouage<br><br>Dessin sur canson<br><br>Mélange des styles géométrique et réaliste<br><br>Ce design a été étudié pour l'arrière du mollet d'un homme, il fallait y intégrer un lion, une lionne et 2 lionceaux.">
+                        <img src="Images/Projets Art/Dessins/Moto.jpg" alt="La Pin Up sur sa moto" class="thumbnail" data-description="Concept pour un tatouage<br><br>Dessin sur canson<br><br>Inspiration Rétro, Pin Up<br><br>La Pin Up devait tenir une machine à tatouage et être assise sur ce modèle de moto.">
+                        <img src="Images/Projets Art/Dessins/MondeFéérique.jpg" alt="Monde Féérique" class="thumbnail" data-description="Dessin sur canson<br><br>Réalisation d'un monde féérique aux crayons aquarellables et tracé à l'encre.">
                     </div>
-                    <button class="category-btn" data-category="category3">PEINTURES.</button>
+                    <button class="category-btn" data-category="category2">PEINTURES.</button>
+                    <div class="thumbnails-containerG" id="thumbnails-category2">
+                        <!-- Vignettes de la catégorie 3 -->
+                        <img src="Images/Projets Art/Peintures/Blues Brothers.jpg" alt="The Blues Brothers" class="thumbnail" data-description="Peinture acrylique aux pinceaux et au couteau sur un disque vinyl sur le thème du film The Blues Brothers.">
+                        <img src="Images/Projets Art/Peintures/Geisha.jpg" alt="La Geisha et son Dogfu" class="thumbnail" data-description="Toile sur cadre, peinture acrylique aux pinceaux. <br><br>Composition sur un thème japonisant.">
+                        <img src="Images/Projets Art/Peintures/Iron Man.jpg" alt="Iron Man" class="thumbnail" data-description="Peinture acrylique faite à l'aérographe sur du bois de palette sur le thème du personnage de comics Marvel, Iron Man.<br><br> Oeuvre disponible à la vente, à retrouver sur ma boutique">
+                        <img src="Images/Projets Art/Peintures/Gwen.jpg" alt="Composition pour Gwen" class="thumbnail" data-description="Toile sur cadre, peinture acrylique aux pinceaux et à l'aérographe. <br><br>Composition sur mesure pour sa propriétaire.">
+                        <img src="Images/Projets Art/Peintures/Hulk.jpg" alt="Hulk" class="thumbnail" data-description="Peinture acrylique faite à l'aérographe sur du bois de palette. <br><br>Inspiré par le personnage de comics Marvel, Hulk et le personnage Daffy Duck. Cette composition a été réalisé suivant les consignes de son acquéreur.">
+                        <img src="Images/Projets Art/Peintures/Mulan.jpg" alt="Mulan" class="thumbnail" data-description="Peinture acrylique sur toile aux pinceaux. <br><br> Sur le thème du dessin animé Disney, Mulan.<br><br> Oeuvre disponible à la vente, à retrouver sur ma boutique">
+                        <img src="Images/Projets Art/Peintures/Captain.jpg" alt="Civil Dancing" class="thumbnail" data-description="Peinture acrylique faite à l'aérographe sur du bois de palette.<br><br> Mélange des genres avec une scène du film Marvel, Civil War et un trait d'humour avec la citation du célèbre Dirty Dancing.<br><br> Oeuvre disponible à la vente, à retrouver sur ma boutique">
+                        <img src="Images/Projets Art/Peintures/Jessica.jpg" alt="Jessica Rabbit" class="thumbnail" data-description="Peinture acrylique faite à l'aérographe sur une peau de tom de batterie (instrument de musique).<br><br> Représentation d'une scène du film Qui veut la peau de Roger Rabbit.">
+                        <img src="Images/Projets Art/Peintures/Poire.jpg" alt="Poire au chocolat" class="thumbnail" data-description="Peinture à l'huile sur canson.<br><br> Dessin d'études">
+                        <img src="Images/Projets Art/Peintures/Joker.jpg" alt="Why so Serious?" class="thumbnail" data-description="Peinture acrylique faite à l'aérographe sur du bois de palette sur le thème du personnage de comics DC, le Joker.<br><br> Oeuvre disponible à la vente, à retrouver sur ma boutique">            
+                    </div>
+                    <button class="category-btn" data-category="category3">ART DIGITAL.</button>
                     <div class="thumbnails-containerG" id="thumbnails-category3">
                         <!-- Vignettes de la catégorie 3 -->
-                          <!-- Vignettes de la catégorie 1 -->
-                        <img src="Images/Projets Art/Peintures/Blues Brothers.jpg" alt="The Blues Brothers" class="thumbnail" data-description="">
-                        <img src="Images/Projets Art/Peintures/Geisha.jpg" alt="La Geisha et son Dogfu" class="thumbnail" data-description="">
-                        <img src="Images/Projets Art/Peintures/Iron Man.jpg" alt="Iron Man" class="thumbnail" data-description="">
-                        <img src="Images/Projets Art/Peintures/Gwen.jpg" alt="Composition pour Gwen" class="thumbnail" data-description="">
-                        <img src="Images/Projets Art/Peintures/Hulk.jpg" alt="Hulk" class="thumbnail" data-description="">
-                        <img src="Images/Projets Art/Peintures/Mulan.jpg" alt="Mulan" class="thumbnail" data-description="">
-                        <!-- Ajoute d'autres images ici -->
+                        <img src="Images/Projets Art/Art Digital/AB.jpg" alt="Bas Relief Floral" class="thumbnail" data-description="Dessin réalisé sur tablette avec l'application Procreate.">
+                        <img src="Images/Projets Art/Art Digital/ShowMust.png" alt="Show Must Go On" class="thumbnail" data-description="Concept pour un tatouage<br><br>Dessin réalisé sur tablette avec l'application Affinity Designer.<br><br>Recherche de calligraphie et ajout d'éléments dans les ornements.">
+                        <img src="Images/Projets Art/Art Digital/MotoCarre.jpg" alt="Floral Motocross" class="thumbnail" data-description="Dessin réalisé sur tablette avec l'application Procreate.<br><br>Idéal comme fond d'écran de tablette ou de téléphone. Peut également être imprimé.">
+                        <img src="Images/Projets Art/Art Digital/Ailes.png" alt="Crayon Ailé" class="thumbnail" data-description="Concept pour un tatouage<br><br>Dessin réalisé sur tablette avec l'application Affinity Designer.<br><br>Composition sur mesures.">
+                        <img src="Images/Projets Art/Art Digital/LadyRetro.png" alt="Lady Rétro" class="thumbnail" data-description="Dessin réalisé sur tablette avec l'application Affinity Designer.<br><br>Fut créé pour être un logo.">
+                        <img src="Images/Projets Art/Art Digital/Geometric.png" alt="Geometric Rose" class="thumbnail" data-description="Concept pour un tatouage<br><br>Dessin réalisé sur tablette avec l'application Affinity Designer.<br><br>Mélange de style entre le géométrique et le traditionnel. Composition pour être tatouer à l'arrière de la jambe ou le long de la colonne vertébrale.">
                     </div>
-                    <button class="category-btn" data-category="category4">ART DIGITAL.</button>
-                    <div class="thumbnails-containerG" id="thumbnails-category4">
-                        <!-- Vignettes de la catégorie 3 -->
-                    </div>
-                    <!-- Ajoute d'autres boutons de catégories et conteneurs de vignettes ici -->
                 </div>
                 <div class="gallery">
                     <div class="display-containerG">
                         <div class="polaroid">
-                            <img src="" alt="" id="displayed-image">
+                            <img src="Images/Projets Art/Dessins/GeometricRose.jpg" alt="" id="displayed-image">
                             <div class="caption" id="image-title"></div>
                         </div>
                         <div class="image-description" id="image-description"></div>
