Retire l'Art digital des menus

--- a/parcours.html
+++ b/parcours.html
@@ -49,18 +49,18 @@
             <div class="text8">
                 <a href="projart.html"><button><span>PROJETS ARTISTIQUES.</span></button></a>
             </div>
-           <div class="text9">
+            <div class="text9">
                 <button>CUSTOMS.</button>
             </div>
             <div class="text10">
-                <button>ART DIGITAL.</button>
-            </div>
-            <div class="text11">
                 <button>GRAPHISME.</button>
             </div>
-            <div class="text12">
+            <div class="text11">
                 <button>MOBILIER.</button>
             </div>
+           <!-- <div class="text12">
+                <button>ART DIGITAL.</button>
+            </div>-->
             <div class="circle-etudes"></div>
            <div class="text13">
                 <p>2008-2010<br> 
