--- a/portfolio.html
+++ b/portfolio.html
@@ -79,14 +79,14 @@
                     <button>CUSTOMS.</button>
                 </div>
                 <div class="text10 button2">
-                    <button>ART DIGITAL.</button>
-                </div>
-                <div class="text11 button2">
                     <button>GRAPHISME.</button>
                 </div>
-                <div class="text12 button2">
+                <div class="text11 button2">
                     <button>MOBILIER.</button>
                 </div>
+                <!--<div class="text12 button2">
+                    <button>ART DIGITAL.</button>
+                </div>-->
                               <!-- Section pour les réseaux sociaux -->
               <div class="social-media">
                 <p>Retrouvez-moi sur les réseaux : </p>
