--- a/projart.html
+++ b/projart.html
@@ -40,11 +40,14 @@
             <div class="boutons3">
                 <button>Contact</button>
             </div>
+            <div class="boutons4">
+                <button>Remplir le formulaire de demande de projet artistique</button>
+            </div>
             <div class="text6">
                 <h1>PROJETS ARTISTIQUES.</h1>
             </div>
             <div class="text13">
-                <h1>Je vous propose mes compétences en art pour réaliser vos créations classiques ou atypiques.</h1>
+                <h1>Je vous propose mes compétences en art pour réaliser vos créations quelles soient classiques ou atypiques.</h1>
             </div>
             <div class="text14">
                 <h1>Chaque projet est unique et fera l'objet d'une étude pour déterminer son prix.</h1>
@@ -59,14 +62,14 @@
                 <button>CUSTOMS.</button>
             </div>
             <div class="text10">
-                <button>ART DIGITAL.</button>
-            </div>
-            <div class="text11">
                 <button>GRAPHISME.</button>
             </div>
-            <div class="text12">
+            <div class="text11">
                 <button>MOBILIER.</button>
             </div>
+           <!-- <div class="text12">
+                <button>ART DIGITAL.</button>
+            </div>-->
 
             <div class="containerG">
                 <div class="menu">
@@ -101,9 +104,9 @@
                         <!-- Vignettes de la catégorie 3 -->
                         <img src="Images/Projets Art/Art Digital/AB.jpg" alt="Bas Relief Floral" class="thumbnail" data-description="Dessin réalisé sur tablette avec l'application Procreate.">
                         <img src="Images/Projets Art/Art Digital/ShowMust.png" alt="Show Must Go On" class="thumbnail" data-description="Concept pour un tatouage<br><br>Dessin réalisé sur tablette avec l'application Affinity Designer.<br><br>Recherche de calligraphie et ajout d'éléments dans les ornements.">
-                        <img src="Images/Projets Art/Art Digital/MotoCarre.jpg" alt="Floral Motocross" class="thumbnail" data-description="Dessin réalisé sur tablette avec l'application Procreate.<br><br>Idéal comme fond d'écran de tablette ou de téléphone. Peut également être imprimé.">
-                        <img src="Images/Projets Art/Art Digital/Ailes.png" alt="Crayon Ailé" class="thumbnail" data-description="Concept pour un tatouage<br><br>Dessin réalisé sur tablette avec l'application Affinity Designer.<br><br>Composition sur mesures.">
                         <img src="Images/Projets Art/Art Digital/LadyRetro.png" alt="Lady Rétro" class="thumbnail" data-description="Dessin réalisé sur tablette avec l'application Affinity Designer.<br><br>Fut créé pour être un logo.">
+                        <img src="Images/Projets Art/Art Digital/Ailes.png" alt="Crayon Ailé" class="thumbnail" data-description="Concept pour un tatouage<br><br>Dessin réalisé sur tablette avec l'application Affinity Designer.<br><br>Composition sur mesures.">
+                        <img src="Images/Projets Art/Art Digital/MotoCarre.jpg" alt="Floral Motocross" class="thumbnail" data-description="Dessin réalisé sur tablette avec l'application Procreate.<br><br>Idéal comme fond d'écran de tablette ou de téléphone. Peut également être imprimé.">
                         <img src="Images/Projets Art/Art Digital/Geometric.png" alt="Geometric Rose" class="thumbnail" data-description="Concept pour un tatouage<br><br>Dessin réalisé sur tablette avec l'application Affinity Designer.<br><br>Mélange de style entre le géométrique et le traditionnel. Composition pour être tatouer à l'arrière de la jambe ou le long de la colonne vertébrale.">
                     </div>
                 </div>
