WP Page customs

--- a/parcours.html
+++ b/parcours.html
@@ -88,7 +88,7 @@
                     Danseuse et régisseuse lumières pour plusieurs troupes de cabaret<br>
                     <br>
                     2018-aujourd’hui <br>
-                    Auto-entrepreneur<br>
+                    Micro-entrepreneur<br>
                     PChArt Design</p> 
             </div>
             <div class="circle-indus"></div>
